--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -20,14 +20,18 @@ source-repository head
   location: https://github.com/rheosystems/docgraph
 
 library
-  hs-source-dirs:
-      src
-  build-depends:
-      base >=4.7 && <5
+  hs-source-dirs:     src
+  default-extensions: OverloadedStrings
+  build-depends:      aeson
+                    , base >=4.7 && <5
+                    , servant
+                    , servant-server
+                    , text
+                    , warp
   exposed-modules:
-      Lib
+                    DocGraph
   other-modules:
-      Paths_docgraph
+                    Paths_docgraph
   default-language: Haskell2010
 
 executable docgraph-exe
