--- a/stack.yaml
+++ b/stack.yaml
@@ -39,8 +39,11 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
-
+extra-deps:
+- servant-0.13
+- servant-server-0.13
+- http-types-0.12.1
+- text-1.2.3.0
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
