--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -24,7 +24,9 @@ library
   default-extensions: OverloadedStrings
   build-depends:      aeson
                     , base >=4.7 && <5
+                    , blaze-html
                     , servant
+                    , servant-blaze
                     , servant-server
                     , text
                     , warp
