--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -25,6 +25,7 @@ library
   build-depends:      aeson
                     , base >=4.7 && <5
                     , blaze-html
+                    , http-api-data
                     , servant
                     , servant-blaze
                     , servant-server
@@ -33,7 +34,7 @@ library
   exposed-modules:
                     DocGraph
   other-modules:
-                    Paths_docgraph
+                    DocGraph.Pages
   default-language: Haskell2010
 
 executable docgraph-exe
