--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -30,10 +30,13 @@ library
                     , servant-server
                     , text
                     , warp
+                    , http-api-data
+
+
   exposed-modules:
                     DocGraph
   other-modules:
-                    Paths_docgraph
+                    DocGraph.Pages
   default-language: Haskell2010
 
 executable docgraph-exe
