--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-10.8
+resolver: lts-11.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,11 +39,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-- servant-0.13
-- servant-server-0.13
-- http-types-0.12.1
-- text-1.2.3.0
+extra-deps: []
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
@@ -67,4 +63,3 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-allow-newer: true
