--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -39,6 +39,7 @@ library
   other-modules:
                     DocGraph.Database
                     DocGraph.Pages
+                    DocGraph.Project
   default-language: Haskell2010
 
 executable docgraph-exe
