--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -43,6 +43,8 @@ library
                     DocGraph.Project
                     DocGraph.Bootstrap
                     DocGraph.Document
+                    DocGraph.User
+                    DocGraph.Login
   default-language: Haskell2010
 
 executable docgraph-exe
