--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -44,7 +44,7 @@ library
                     DocGraph.Bootstrap
                     DocGraph.Document
                     DocGraph.User
-                    DocGraph.Login
+                  --DocGraph.Login
   default-language: Haskell2010
 
 executable docgraph-exe
