--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.0
+resolver: lts-11.8
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,7 +40,9 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- servant-auth-cookie-0.6.0.3
+- cookie-0.4.3
+- servant-auth-0.3.1.0
+- servant-auth-server-0.3.2.0
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
@@ -64,4 +66,4 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-allow-newer: true
+# allow-newer: true
