added login form checking the user's existance in the table

--- a/docgraph.cabal
+++ b/docgraph.cabal
@@ -45,7 +45,7 @@ library
                     DocGraph.Bootstrap
                     DocGraph.Document
                     DocGraph.User
-                  --DocGraph.Login
+                    DocGraph.Login
   default-language: Haskell2010
 
 executable docgraph-exe
